Fix CocktailListItem: fix image border-radius Fix ModalPreview: refactor preview layout Fix ModalAddForm: add image src validation Fix CocktailList: add cursor styles on add button Fix ModalAddForm: add styles to inputs to prevent jumping with helper text

--- a/src/components/cocktail-list-item/cocktailListItem.scss
+++ b/src/components/cocktail-list-item/cocktailListItem.scss
@@ -11,6 +11,11 @@
 		grid-template-columns: 1fr 2fr;
 	}
 
+	&__img {
+		border-top-left-radius: 10px;
+		border-bottom-left-radius: 10px;
+	}
+
 	&__img-block {
 		img {
 			width: 100%;
